--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,8 @@
   }
   
   body{
-    background-color: #101753;
-    color: #eee;
+    background-color: #004f83;
+    color: #04324d;
   }
   main{
     padding-top: 50px;
@@ -15,8 +15,8 @@
   }
   
   button{
-    background-color: transparent;
-    color: rgba(255,255,255,0.8);
+    background-color:  transparent;
+    color:  white ;
     border:0;
     display: inline-block;
     width: 100px;
@@ -42,4 +42,5 @@
     margin-bottom: 10px;
     margin-top: 20px;
     text-transform: capitalize;
+    color: white;
   }
